@@ -62,7 +62,7 @@ However, what happens if the configuration looks like the following example:
 ====
 
 Note that there is no `max-messages-per-poll` specified.
-As we cover later, the identical poller configuration in the `PollingConsumer` (for example, service-activator, filter, router, and others) would have a default value of -1 for `max-messages-per-poll`, which means "`execute the polling task non-stop unless the polling method returns null (perhaps because there are no more messages in the `QueueChannel`)`" and then sleep for one second.
+As we cover later, the identical poller configuration in the `PollingConsumer` (for example, `service-activator`, `filter`, `router`, and others) would have a default value of `-1` for `max-messages-per-poll`, which means "`execute the polling task non-stop unless the polling method returns null (perhaps because there are no more messages in the `QueueChannel`)`" and then sleep for one second.
 
 However, in the `SourcePollingChannelAdapter`, it is a bit different.
 The default value for `max-messages-per-poll` is `1`, unless you explicitly set it to a negative value (such as `-1`).
@@ -76,6 +76,8 @@ However, if you are sure that your method can return null and you need to poll f
 <int:poller max-messages-per-poll="-1" fixed-rate="1000"/>
 ----
 ====
+
+Starting with version 5.5, a `0` value for `max-messages-per-poll` has a special meaning - skip the `MessageSource.receive()` call altogether, which may be considered as pausing for this inbound channel adapter until the `maxMessagesPerPoll` is changed to a non-zero value at a later time, e.g. via a Control Bus.
 =====
 
 [[channel-adapter-namespace-outbound]]
